@@ -61,12 +61,5 @@
     "version": "10",
     "platform": "Windows 8",
     "screenResolution": "1280x1024"
-  },
-  "ie9": {
-    "base": "SauceLabs",
-    "browserName": "internet explorer",
-    "version": "9",
-    "platform": "Windows 7",
-    "screenResolution": "1280x1024"
   }
 }
