@@ -1,3 +1,7 @@
+karma-viewport-1.0.3 (2018-12-26)
+
+  * Updated all dependencies to fix security vulnerabilities
+
 karma-viewport-1.0.2 (2018-03-28)
 
   * Removed unnecessarily exported typing
